--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Display a new image everyday from NASA's homepage",
     "scripts": {
-        "start": "node server.js"
+        "start": "node api/index.js"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
