--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
     "version": 2,
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "index.js"
+        "src": "/",
+        "dest": "/api/index.js",
+        "methods": ["POST"]
       }
     ]
   }
